<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layoutDirection="rtl"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:fontFamily="@font/font"
            android:text="@string/login"
            android:textColor="@color/colorWord"
            android:textSize="28dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="16dp"
            android:id="@+id/username"
            android:background="@drawable/et_shape"
            android:hint="@string/fname"
            android:inputType="text"
            android:paddingLeft="16dp"
            android:drawableLeft="@drawable/person_24dp"
            android:fontFamily="@font/font"
            android:textColorHint="#3C3F3F"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="16dp"
            android:background="@drawable/et_shape"
            android:hint="@string/email"
            android:fontFamily="@font/font"
            android:drawableLeft="@drawable/email_24dp"
            android:inputType="textEmailAddress"
            android:paddingLeft="16dp"
            android:id="@+id/email_et"
            android:textColorHint="#3C3F3F"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="16dp"
            android:gravity="center"
            android:background="@drawable/et_shape"
            android:hint="@string/password"
            android:fontFamily="@font/font"
            android:id="@+id/pass_et"
            android:inputType="textPassword"
            android:paddingLeft="16dp"
            android:textColorHint="#3C3F3F"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:fontFamily="@font/font"
            android:text="@string/forgitpass"
            android:textColor="@color/colorWord"
            android:textSize="18dp"
            android:id="@+id/forget_pass"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        >

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="45dp"
        android:fontFamily="@font/font"
        android:background="@drawable/btn_shape_solid"
        android:text="@string/login"
        android:id="@+id/login_btn"
        android:textSize="20dp"
        android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>