<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layoutDirection="rtl"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="110dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="70dp"
        android:fontFamily="@font/font"
        android:gravity="center"
        android:text="@string/surelogout"
        android:textColor="@color/colorWord"
        android:textSize="28dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:background="@drawable/et_shape"
            android:text="@string/no"
            android:fontFamily="@font/font"
            android:textColor="#204969"
            android:textSize="18dp"
            android:id="@+id/cancel"
            android:textStyle="bold" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:background="@drawable/btn_shape_solid"
            android:text="@string/yes"
            android:id="@+id/log_out"
            android:fontFamily="@font/font"
            android:textColor="#204969"
            android:textSize="18dp"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>