<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="14dp"
        >
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="90dp"
            android:layout_marginLeft="12dp"
            android:src="@drawable/avatar"
            android:layout_marginRight="16dp"
            android:layout_marginTop="10dp"
            android:layout_height="90dp"
            android:id="@+id/user_img"
            />
        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_margin="12dp"
            android:fontFamily="@font/font"
            android:gravity="center"
            android:text="    "
            android:textColor="#0921A2"
            android:textSize="28dp" />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="11dp"
        android:text="@string/home"
        android:textColor="@color/colorWord"
        android:fontFamily="@font/font"
        android:textSize="28dp"
        android:drawablePadding="16dp"
        android:id="@+id/home"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="11dp"
        android:text="ادارة المجمع"
        android:textColor="@color/colorWord"
        android:fontFamily="@font/font"
        android:textSize="28dp"
        android:drawablePadding="16dp"
        android:id="@+id/mogma"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="11dp"
        android:text="قاموس اللغة العربية"
        android:textColor="@color/colorWord"
        android:fontFamily="@font/font"
        android:textSize="28dp"
        android:drawablePadding="16dp"
        android:id="@+id/arb_word"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="11dp"
        android:text="المصطلحات العلمية "
        android:textColor="@color/colorWord"
        android:fontFamily="@font/font"
        android:textSize="28dp"
        android:drawablePadding="16dp"
        android:id="@+id/cs_word"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="11dp"
        android:text="@string/aboutas"
        android:textColor="@color/colorWord"
        android:textSize="28dp"
        android:fontFamily="@font/font"
        android:drawablePadding="16dp"
        android:id="@+id/about"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="11dp"
        android:text="@string/share"
        android:textColor="@color/colorWord"
        android:fontFamily="@font/font"
        android:textSize="28dp"
        android:drawablePadding="16dp"
        android:id="@+id/share"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="11dp"
        android:text="@string/rate"
        android:textColor="@color/colorWord"
        android:fontFamily="@font/font"
        android:textSize="28dp"
        android:drawablePadding="16dp"
        android:id="@+id/rate"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="11dp"
        android:text="@string/logout"
        android:textColor="@color/colorWord"
        android:textSize="28dp"
        android:fontFamily="@font/font"
        android:drawablePadding="16dp"
        android:id="@+id/logout"
        />
   </LinearLayout>